--- a/map1.html
+++ b/map1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="ja"><head><meta charset="utf-8"/>
 
-<title>マップアプリ1</title>
+<title>ああああ</title>
 
 <link rel="apple-touch-icon" href="app-icon.png"/>
 <meta property="og:image" content="ogp-image.jpg"/>
@@ -14,7 +14,7 @@
 
 window.onload = function() {
 	var map = initMap('mapid')
-	map.setZoom(4)
+	map.setZoom(16)
 	map.panTo([ 35.943560,136.188917 ]) // 鯖江駅
 }
 
@@ -27,7 +27,7 @@ h1 { font-size: 5vw; margin: 0; }
 
 </style></head><body>
 
-<h1>egmapjs - Leaflet x 地理院地図</h1>
+<h1>ほげほげ/h1>
 <div id="mapid"></div>
 
 </body></html>
