--- a/map1.html
+++ b/map1.html
@@ -27,7 +27,7 @@ h1 { font-size: 5vw; margin: 0; }
 
 </style></head><body>
 
-<h1>ほげほげ/h1>
+<h1>ほげほげ</h1>
 <div id="mapid"></div>
 
 </body></html>
