--- a/map1.html
+++ b/map1.html
@@ -16,7 +16,7 @@ window.onload = function() {
 	var map = initMap('mapid')
 	map.setZoom(16)
 	map.panTo([ 35.943560,136.188917 ]) // 鯖江駅
-	map.addIcon(35.943560,136.188917, "さばええき", "icon-hanadojo.png", 64) // 鯖江駅
+	map.addIcon(35.943560,136.188917, "さばええき", "samples/icon-hanadojo.png", 64) // 鯖江駅
 }
 
 </script>
