--- a/map1.html
+++ b/map1.html
@@ -17,6 +17,28 @@ window.onload = function() {
 	map.setZoom(16)
 	map.panTo([ 35.943560,136.188917 ]) // 鯖江駅
 	map.addIcon(35.943560,136.188917, "さばええき", "icon-megane.png", 64) // 鯖江駅
+	
+	
+	// SPARQLクエリー
+	var query = `
+		prefix ic: <http://imi.go.jp/ns/core/rdf#>
+		prefix xsd: <http://www.w3.org/2001/XMLSchema#>
+		select ?uri ?name ?lat ?lng {
+			?uri ic:名称 [ ic:表記 ?name ].
+			?uri ic:地理座標 [ ic:緯度 ?lat; ic:経度 ?lng; ].
+			filter(contains(str(?name),'鯖江'))
+		} limit 100
+	`
+	querySPARQL(query, function(data) {
+		var items = data.results.bindings;
+		for (var i = 0; i < items.length; i++) {
+			var item = items[i];
+			var lat = item.lat.value;
+			var lng = item.lng.value;
+			var name = item.name.value;
+			map.addIcon(lat, lng, name)
+		}
+	});
 }
 
 </script>
