--- a/map1.html
+++ b/map1.html
@@ -39,6 +39,15 @@ window.onload = function() {
 			map.addIcon(lat, lng, name, "icon-carparking.png", 64,64)
 		}
 	});
+	
+	var current = map.addIcon(0, 0, "現在地", "icon-walking.png", 64, 64)
+	navigator.geolocation.watchPosition(function(gpos) {
+		const pos = [ gpos.coords.latitude, gpos.coords.longitude ]
+		current.setLatLng(pos)
+		map.panTo(pos)
+	}, function() {
+		alert("現在位置に取得に失敗！")
+	})
 }
 
 </script>
