--- a/map1.html
+++ b/map1.html
@@ -48,6 +48,7 @@ window.onload = function() {
 	}, function() {
 		alert("現在位置に取得に失敗！")
 	})
+	map.on("click",(e) => alert(e.latlng))
 }
 
 </script>
